--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mocha-parallel-tests",
-  "version": "2.1.0",
-  "homepage": "https://github.com/mocha-parallel/mocha-parallel-tests",
+  "name": "@mulesoft/mocha-parallel-tests",
+  "version": "1.0.1",
+  "homepage": "https://github.com/mulesoft-labs/mocha-parallel-tests",
   "description": "Run mocha tests in parallel",
   "main": "./dist/main/mocha.js",
   "module": "./dist/main/mocha.js",
@@ -27,7 +27,7 @@
     "url": "git://github.com/mocha-parallel/mocha-parallel-tests.git"
   },
   "bugs": {
-    "url": "https://github.com/mocha-parallel/mocha-parallel-tests/issues"
+    "url": "https://github.com/mulesoft-labs/mocha-parallel-tests/issues"
   },
   "files": [
     "bin",
